# src

./: README  WeeklySchedule  index.html  params.json
base-server/: Makefile  main.c
dnw/: README
dnw/kernel/: .secbulk.ko.cmd  .secbulk.mod.o.cmd  .secbulk.o.cmd
g-server/: shttpd  tags
ipcam/: Makefile  README.md  common.h  main.c
ipcam/agent/: agent.c  agent.h  display_agent.c  upstream_agent.c  videocap_agent.c  x264enc_agent.c
ipcam/buffer/: buffer.c  buffer.h  queue.c  queue.h  yqueue.h
ipcam/codec/: codec.h
ipcam/codecs/: avcodec_dec.c  avcodec_decode_agent.c  avcodec_decode_agent.h  codec.c  codec.h  decoder_agent.c  decoder_agent.h  x264_agent.c  x264_agent.h  x264_enc.c  x264_encode_agent.c  x264_encode_agent.h
ipcam/device/: device.c
ipcam/devices/: alsa.c  device.c  device.h  usbcam_agent.c  usbcam_agent.h  v4l2.c  video_capture_agent.c  video_capture_agent.h  video_device_agent.c  (+1 more)
libraries/: README
linphone-3.5.2/: README
partysip-2.2.3/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  tags
partysip-2.2.3/conf/: Makefile  Makefile.am  Makefile.in  partysip.conf  partysipd
partysip-2.2.3/debian/: Makefile  Makefile.am  Makefile.in  README.Debian  changelog  control  copyright  files  libppl-dev.install  partysip-default  partysip-dev.dirs  partysip-dev.install  partysip.dirs  partysip.init  partysip.install  rules
partysip-2.2.3/doc/: Makefile  Makefile.in
partysip-2.2.3/partysip/: Makefile  Makefile.am  Makefile.in  osip_msg.h  partysip.h  psp_config.h  psp_macros.h  psp_nat.h  psp_plug.h  psp_request.h  psp_utils.h
partysip-2.2.3/plugin/: Makefile  Makefile.am  Makefile.in
partysip-2.2.3/plugin/auth/: Makefile  Makefile.am  Makefile.in  auth.c  auth.h  auth_core.c
partysip-2.2.3/plugin/auth/.deps/: auth.Plo  auth_core.Plo
partysip-2.2.3/plugin/filter/: Makefile  Makefile.am  Makefile.in  filter.c  filter.h  filter_core.c
partysip-2.2.3/plugin/filter/.deps/: filter.Plo  filter_core.Plo
partysip-2.2.3/plugin/groups/: Makefile  Makefile.am  Makefile.in  groups.c  groups.h  groups_core.c
partysip-2.2.3/plugin/groups/.deps/: groups.Plo  groups_core.Plo
partysip-2.2.3/plugin/ls_localdb/: Makefile  Makefile.am  Makefile.in  ls_localdb.c  ls_localdb.h  ls_localdb_core.c
partysip-2.2.3/plugin/ls_localdb/.deps/: ls_localdb.Plo  ls_localdb_core.Plo
partysip-2.2.3/plugin/ls_sfull/: Makefile  Makefile.am  Makefile.in  ls_sfull.c  ls_sfull.h  ls_sfull_core.c
partysip-2.2.3/plugin/ls_sfull/.deps/: ls_sfull.Plo  ls_sfull_core.Plo
partysip-2.2.3/plugin/ls_static/: Makefile  Makefile.am  Makefile.in  ls_static.c  ls_static.h  ls_static_core.c
partysip-2.2.3/plugin/ls_static/.deps/: ls_static.Plo  ls_static_core.Plo
partysip-2.2.3/plugin/rgstrar/: Makefile  Makefile.am  Makefile.in  rgstrar.c  rgstrar.h  rgstrar_core.c
partysip-2.2.3/plugin/rgstrar/.deps/: rgstrar.Plo  rgstrar_core.Plo
partysip-2.2.3/plugin/syntax/: Makefile  Makefile.am  Makefile.in  syntax.c  syntax.h  syntax_core.c
partysip-2.2.3/plugin/syntax/.deps/: syntax.Plo  syntax_core.Plo
partysip-2.2.3/plugin/udp/: Makefile  Makefile.am  Makefile.in  udp.c  udp.h  udp_core.c
partysip-2.2.3/plugin/udp/.deps/: udp.Plo  udp_core.Plo
partysip-2.2.3/ppl/: Makefile  Makefile.am  Makefile.in
partysip-2.2.3/ppl/unix/: Makefile  Makefile.am  Makefile.in  ppldbm.c  ppldnsv6.c  ppldso.c  pplgetopt.c  pplinit.c  pplmd5.c  pplpipe.c  pplsocket.c  ppltime.c  ppluinfo.c
partysip-2.2.3/ppl/unix/.deps/: ppldbm.Plo  ppldnsv6.Plo  ppldso.Plo  pplgetopt.Plo  pplinit.Plo  pplmd5.Plo  pplpipe.Plo  pplsocket.Plo  ppltime.Plo  ppluinfo.Plo
partysip-2.2.3/ppl/unix/ppl/: Makefile  Makefile.am  Makefile.in  ppl.h  ppl_dns.h  ppl_dso.h  ppl_getopt.h  ppl_init.h  ppl_md5.h  ppl_pipe.h  ppl_socket.h  ppl_time.h  ppl_uinfo.h
partysip-2.2.3/ppl/win32/: Makefile  Makefile.am  Makefile.in  ppldbm.c  ppldns.c  ppldso.c  pplgetopt.c  pplinit.c  pplmd5.c  pplpipe.c  pplsocket.c  ppluinfo.c
partysip-2.2.3/ppl/win32/ppl/: Makefile  Makefile.am  Makefile.in  ppl.h  ppl_dbm.h  ppl_dns.h  ppl_dso.h  ppl_getopt.h  ppl_init.h  ppl_md5.h  ppl_pipe.h  ppl_socket.h  ppl_time.h
partysip-2.2.3/scripts/: Makefile  Makefile.in  ac_define_dir.m4  mkinstalldirs  type_socklen_t.m4
partysip-2.2.3/src/: Makefile  Makefile.am  Makefile.in  imp.c  imp_plugin.c  main.c  nt_svc.c  ntservice.c  osip_msg.c  partysip-config  partysip-config.in  proxyfsm.h  psp_config.c  psp_core.c  psp_core2.c  psp_core3.c  psp_core4.c  psp_core5.c  psp_module.c  psp_nat.c  psp_osip.c  psp_plugin.c  psp_request.c  psp_resolv.c  psp_utils.c  sfp.c  sfp_branch.c  sfp_fsm.c  sfp_fsm2.c  sfp_plugin.c  tlp.c  tlp_plugin.c
partysip-2.2.3/src/.deps/: imp.Po  imp_plugin.Po  main.Po  nt_svc.Po  ntservice.Po  osip_msg.Po  psp_config.Po  psp_core.Po  psp_core2.Po  psp_core3.Po  psp_core4.Po  psp_core5.Po  psp_module.Po  psp_nat.Po  psp_osip.Po  psp_plugin.Po  psp_request.Po  psp_resolv.Po  psp_utils.Po  sfp.Po  sfp_branch.Po  sfp_fsm.Po  sfp_fsm2.Po  sfp_plugin.Po  tlp.Po  tlp_plugin.Po
partysip-2.2.3/tools/: Makefile  Makefile.am  Makefile.in  psp_users.c
partysip-2.2.3/tools/.deps/: psp_users.Po
partysip-2.2.3/windows/: Makefile  Makefile.am  Makefile.in  README  partysip.dsp  plugins.dsw  ppl.dsp  psp_auth.dsp  psp_filter.dsp  psp_ls_localdb.dsp  psp_ls_sfull.dsp  psp_ls_static.dsp  psp_rgstrar.dsp  psp_syntax.dsp  psp_udp.dsp
partysip-2.2.3/windows/vsnet/: Makefile  Makefile.am  Makefile.in  partysip.sln  partysip.vcproj  ppl.vcproj  psp_auth.vcproj  psp_filter.vcproj  psp_ls_localdb.vcproj  psp_ls_sfull.vcproj  psp_ls_static.vcproj  psp_rgstrar.vcproj  psp_syntax.vcproj  psp_udp.vcproj
player/: Makefile  README  main.c  player.c
sktool/: build.sh  client.cpp  client.h  client.ui  main.cpp  server.cpp  server.h  server.ui  sktlib.cpp  sktlib.h  sktool.cpp  sktool.h
sms/: Makefile  README  TODO  common.c  common.h  debug.h  sdl.c  sink.c  sink.h  sms.c  sms.h  source.c  source.h  v4l.c
(+193 files in other folders)
